--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,7 @@ a {
 
   font-size: 21px;
   font-weight: 700;
+  vertical-align: top;
   color: #000000;
 }
 
@@ -374,6 +375,7 @@ a {
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
+  vertical-align: top;
   color: #000000;
 }
 
@@ -774,6 +776,8 @@ a {
   height: 48px;
   margin-right: 6px;
 
+  vertical-align: top;
+
   background-color: #81b3d2;
 }
 
@@ -795,6 +799,8 @@ a {
           box-sizing: border-box;
   width: 46px;
   height: 48px;
+
+  vertical-align: top;
 
   background-color: transparent;
 }
@@ -1404,6 +1410,8 @@ a {
   height: 18px;
   margin-left: 3px;
 
+  vertical-align: top;
+
   background-color: transparent;
   background-image: url(../img/rating-star.svg);
   background-repeat: no-repeat;
@@ -1417,6 +1425,7 @@ a {
 
   line-height: 27px;
   text-align: center;
+  vertical-align: top;
 
   background-color: #f2f2f2;
 }
